<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/lowBar"
        app:tabGravity="fill"
        app:tabMaxWidth="0dp"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_round_date_range_24px"
            android:text="@string/entities_tab_points" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_round_account_box_24px"
            android:text="@string/entities_tab_weight" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_round_view_list_24px"
            android:text="@string/entities_tab_blood" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_round_calendar_today_24px"
            android:text="@string/entities_tab_preferences" />

    </com.google.android.material.tabs.TabLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            >

        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>



</LinearLayout>