<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_weight_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_weight_title"
        android:textSize="30sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_weight_date_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:defaultFocusHighlightEnabled="true"
        android:hint="@string/add_weight_date"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="2dp"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_weight_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_weight_weight_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:defaultFocusHighlightEnabled="true"
        android:hint="@string/add_weight_weight"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="2dp"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_weight_weight_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_weight_user_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:defaultFocusHighlightEnabled="true"
        android:hint="@string/add_points_user"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="2dp"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_weight_user_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
        android:id="@+id/add_weight_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_weight_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            android:text="@string/add_weight_cancel" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_weight_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            android:text="@string/add_weight_save" />

    </GridLayout>

</LinearLayout>