<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <LinearLayout

        android:id="@+id/add_points_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_points_date_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:defaultFocusHighlightEnabled="true"
            android:hint="@string/add_points_date"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_points_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_round_calendar_today_24px"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/add_points_switches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/add_points_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_points_exercise" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/add_points_eat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_points_eat" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/add_points_drink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_points_drink" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_points_notes_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:defaultFocusHighlightEnabled="true"
            android:hint="@string/add_points_notes"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_points_notes_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3" />
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

</ScrollView>
