<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:columnCount="1"
    android:rowCount="2"
    android:id="@+id/activity_login"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/topBar"
        android:elevation="8dp"
        android:fitsSystemWindows="false"
        android:layout_rowWeight="0"
        android:layout_columnWeight="1"
        app:title="@string/login_title"
        app:titleTextColor="@color/white"
        android:foregroundTint="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/container_login"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:layout_gravity="fill_vertical">

        <ScrollView
            android:id="@+id/login_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="24dp"
                android:paddingTop="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:errorTextAppearance="@style/error_appearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/login_password"
                    app:counterEnabled="true"
                    app:counterMaxLength="12"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:errorTextAppearance="@style/error_appearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/remember_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/login_remember" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signin_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="64dp"
                    android:stateListAnimator="@animator/button_elevation"
                    android:text="@string/login_button"
                    app:cornerRadius="24dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/forgot_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="64dp"
                    android:text="@string/login_forgot_password" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</GridLayout>